Java Script Class No 1 Practice:~
Here Im Solve Some Question :~

* Simple Calculator Function
* Default Parmeter Function
* Switch Cases
* Input Values Get Function & Append
  Text Default And Prompt Function...

--- a/Java Script/Class No 1/index.html
+++ b/Java Script/Class No 1/index.html
@@ -11,6 +11,26 @@
 
     <h2>Data Types</h2>
 
+    <a href="#" onclick="alert('Kya Msla Ha ???')">Click Me For Fun</a>
+
+    <br />
+    <br />
+
+    <input
+      id="username"
+      onfocus="this.style.background = 'lightblue' "
+      onblur="this.style.background = 'white' "
+      type="text"
+      placeholder="Enter Your Name"
+    />
+
+    <button onclick="user()">Submit</button>
+
+    <br>
+    <br>
+
+    <p id="para"></p>
+
     <script src="app.js"></script>
   </body>
 </html>
